--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -9,12 +9,11 @@
         content="This content the join page of the Chamber of Commerce of San Antonio Chile to be member or have some questions about the chamber of commerce">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Chamber of Commerce of San Antonio Chile - Join page">
+    <meta property="og:title" content="Traveler Treasure - Home page">
     <meta property="og:description"
-        content="This content the join page of the Chamber of Commerce of San Antonio Chile to be member or have some questions about the chamber of commerce">
-    <meta property="og:image"
-        content="https://leonardo-wilches.github.io/wdd231/chamber/images/san-antonio-chamber.png">
-    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/join.html">
+        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
