--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -8,12 +8,12 @@
     <meta name="description"
         content="This page content the contact page of Traveler Treasure where you can join to Traveler Treasure Club">
     <meta name="author" content="Leonardo Wilches">
-
+    
     <meta property="og:title" content="Traveler Treasure - Home page">
     <meta property="og:description"
-        content="This page content the contact page of Traveler Treasure where you can join to Traveler Treasure Club">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final>
-        <meta property=" og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
