--- a/finalproject/club.html
+++ b/finalproject/club.html
@@ -9,11 +9,11 @@
         content="This page contains the club where you can view souvenir products with their respective descriptions and images.">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Traveler Treasure - Club page">
+    <meta property="og:title" content="Traveler Treasure - Home page">
     <meta property="og:description"
-        content="This page contains the club where you can view souvenir products with their respective descriptions and images.">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final>
-    <meta property=" og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
