--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="This page content the contact page of Traveler Treasure where you can join to Traveler Treasure Club">
     <meta name="author" content="Leonardo Wilches">
-    
+
     <meta property="og:title" content="Traveler Treasure - Home page">
     <meta property="og:description"
         content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
@@ -50,7 +50,7 @@
         </nav>
     </div>
     <main class="thankyou-main">
-        <img src="images/san-antonio-hero.webp" alt="San Antonio Port Image">
+        <img class= "logo" src="images/traveler-treasure-logo.png" alt="Traveler Treasure Logo Image" width="100">
         <section class="thankyou-message">
             <h1>Thank You for Joining Us!</h1>
             <p>Your application has been successfully submitted.</p>
