--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -54,16 +54,17 @@
         <h1>Home</h1>
         <div class="home">
             <section class="events title">
-                <h2>San Antonio</h2>
-                <p>San Antonio is a charming coastal city known for its lively port and beautiful ocean views. Visitors can enjoy a
-                peaceful walk along the waterfront, watch the fishing boats come and go, or explore nearby beaches perfect for relaxing
-                afternoons. One of the most popular attractions is Paseo Bellamar, a scenic promenade with fresh sea air and local
-                vendors.
+                <h2>Chile</h2>
+                <p>Chile is a land of extraordinary contrasts, stretching over 4,300 kilometers along South America’s Pacific coast. In one
+                journey, you can explore the otherworldly landscapes of the Atacama Desert, stand beneath the towering peaks of
+                Patagonia, visit colorful coastal cities like Valparaíso, and discover the mysterious Moai statues of Easter Island. The
+                country is home to more than 40 national parks, pristine lakes, massive glaciers, and the Andes Mountains running along
+                its entire eastern border.
                 
-                For a more cultural experience, the Museo de Historia Natural e Histórico de San Antonio offers insight into the area’s
-                maritime history. A visit wouldn’t be complete without trying fresh seafood from local markets, especially the
-                traditional Chilean dish empanadas de mariscos. San Antonio combines authentic local life with coastal beauty, making it
-                a relaxing and memorable destination.</p>
+                With some of the clearest skies on Earth for stargazing, world-renowned wine valleys, vibrant festivals, rich Indigenous
+                heritage, and a cuisine inspired by the Pacific Ocean and fresh local ingredients, Chile offers a unique blend of
+                nature, culture, and adventure. Whether you are seeking outdoor exploration, cultural discovery, or unforgettable
+                landscapes, Chile delivers remarkable experiences in every season.</p>
             </section>
             <section class="weather title">
                 <h2>Current Weather</h2>
