--- a/finalproject/club.html
+++ b/finalproject/club.html
@@ -53,7 +53,7 @@
     <h1>Treasures Club</h1>
 
     <section class="products">
-        <div id="places" class="products-grid"></div>
+        <div id="souvenirs" class="products-grid"></div>
     </section>
     <div id="place-modal" class="modal" aria-hidden="true">
         <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="modal-title">
