few changes in page

--- a/finalproject/about.html
+++ b/finalproject/about.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traveler Treasure - Contact page</title>
+    <title>Traveler Treasure - About Page</title>
     <meta name="description"
-        content="This page content the landing and home page of Traveler Treasure where local information of touristics places is displayed">
+        content="This page contains important information about Traveler Treasure and briefly answers common questions about this page, company and club.">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Traveler Treasure - Home page">
+    <meta property="og:title" content="Traveler Treasure - About page">
     <meta property="og:description"
-        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
-    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="This page contains important information about Traveler Treasure and briefly answers common questions about this page, company and club.">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/finalproject">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/finalproject/about.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
