--- a/finalproject/club.html
+++ b/finalproject/club.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traveler Treasure - Club Page</title>
     <meta name="description"
-        content="This page contains the club where you can view souvenir products with their respective descriptions and images.">
+        content="This page contains the club where you can view souvenir products with their respective descriptions, images and prices.">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Traveler Treasure - Home page">
+    <meta property="og:title" content="Traveler Treasure - Club Page">
     <meta property="og:description"
-        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
-    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="This page contains the club where you can view souvenir products with their respective descriptions, images and prices.">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/finalproject">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/finalproject/club.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
