--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>San Antonio Chamber of Commerce - Contact Page</title>
+    <title>Traveler Treasure - Contact Page</title>
     <meta name="description"
-        content="This content the join page of the Chamber of Commerce of San Antonio Chile to be member or have some questions about the chamber of commerce">
+        content="This page content the contact information and forms Traveler Treasure Chile to be member or have some questions about the souvenir products and be part of the page information.">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Traveler Treasure - Home page">
+    <meta property="og:title" content="Traveler Treasure - Contact page">
     <meta property="og:description"
-        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
-    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="This page content the contact information and forms Traveler Treasure Chile to be member or have some questions about the souvenir products and be part of the page information.">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/finalproject">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/finalproject/contact.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
