--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -13,8 +13,8 @@
     <meta property="og:description"
         content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
     <meta property="og:image"
-        content="https://leonardo-wilches.github.io/wdd231/final">
-    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="https://leonardo-wilches.github.io/wdd231/finalproject">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/finalproject/index.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
