--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traveler Treasure - Home page</title>
+    <title>Traveler Treasure - Thank You Page</title>
     <meta name="description"
-        content="This page content the contact page of Traveler Treasure where you can join to Traveler Treasure Club">
+        content="This page contains a thank you message after joining Traveler Treasure or searching for information about souvenirs and services.">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Traveler Treasure - Home page">
+    <meta property="og:title" content="Traveler Treasure - Thank You Page">
     <meta property="og:description"
-        content="This page contains the landing and home page of Traveler Treasure where local information of tourist places is displayed">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/final">
-    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/index.html">
+        content="This page contains a thank you message after joining Traveler Treasure or searching for information about souvenirs and services.">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/finalproject">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/finalproject/thankyou.html">
 
     <link rel="icon" href="images/path/favicon.ico">
 
